--- a/app.css
+++ b/app.css
@@ -11,13 +11,10 @@
 
 .main {
   text-align: center;
-  margin: 5% 0% 12% 38%;
-  padding: 50px 100px 110px 80px;
+  margin: 5% 15% 12% 20%;
+  padding: 50px 10% 110px 10%;
   background: rgba(21, 25, 29, 0.1);
-  border: 1px solid rgb(27, 20, 20);
-  opacity: 0.7;
-  max-width: 250px;
-  max-height: 500px;
+
   font-size: larger;
   font-family: Comic Sans MS, Comic Sans, cursive;
 }
@@ -42,11 +39,11 @@ input[type="text"] {
 
 .email {
   height: 30px;
-  width: 210px;
+  width: 200px;
 }
 .password {
   height: 30px;
-  width: 210px;
+  width: 200px;
 }
 button {
   font-size: larger;
@@ -54,4 +51,90 @@ button {
 }
 footer {
   font-size: larger;
+}
+
+@media screen and (max-width: 550px) {
+  .heading {
+    font-size: 35px;
+  }
+  body {
+    text-align: center;
+  }
+
+  .main {
+    text-align: center;
+    width: 400px;
+    background: none;
+    margin-left: -10px;
+  }
+  .email {
+    height: 15px;
+    width: 60px;
+  }
+  .password {
+    height: 15px;
+    width: 60px;
+  }
+  .tittle {
+    font-size: 25px;
+  }
+  .button {
+    font-size: large;
+  }
+}
+@media screen and (max-width: 450px) {
+  .heading {
+    font-size: 35px;
+  }
+  body {
+    text-align: center;
+  }
+
+  .main {
+    text-align: center;
+    width: 300px;
+    background: none;
+    margin-left: -10px;
+  }
+  .email {
+    height: 15px;
+    width: 60px;
+  }
+  .password {
+    height: 15px;
+    width: 60px;
+  }
+  .tittle {
+    font-size: 25px;
+  }
+  .button {
+    font-size: medium;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .heading {
+    font-size: 30px;
+  }
+  body {
+    text-align: center;
+  }
+
+  .main {
+    text-align: center;
+    width: 350px;
+    background: none;
+    margin-left: -50px;
+  }
+  .email {
+    height: 15px;
+    width: 60px;
+  }
+  .password {
+    height: 15px;
+    width: 60px;
+  }
+  .tittle {
+    font-size: 20px;
+  }
 }
